--- a/src/Elements/Hero.css
+++ b/src/Elements/Hero.css
@@ -39,12 +39,12 @@
 
 
 .hero-bg-content{
-  position: absolute;
-  left: 50%;
-  top: 50%;
   max-width:100% ;
-  transform: translate(-50%, -50%);
-  font-size: 4.5em;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  height: 100vh;
+  font-size: 5.5em;
   font-family: 'Markpro_bold';
   font-weight: 900;
   color: rgba(255,255,255,0.8);
@@ -63,15 +63,37 @@
 
 .hero-moving-text{
   position: absolute;  
-  right: -300px;
-  top: 700px;
-  font-family: 'CABINSKETCH-BOLD';
+  top: 400px;
+  left: 1300px;
+  font-family: 'gotham-bold';
   font-weight: 900  ;
   z-index: 9999;
-  color: rgba(255,255,255,0.1);
-  font-size: 150px;
+  color: rgba(0,0,0,0);
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: white;
+  font-size: 250px;
+  transition: transform 2s ease;
+  white-space: nowrap;
+}
+
+.hero-moving-text1{
+  transform: rotate(90deg);
+  position: absolute;  
+  top: 200px;
+  right: 490px;
+  font-family: 'Inter';
+  /* color: black; */
+  color: rgba(255,255,255,0.95);
+  font-weight: 900  ;
+  z-index: 9999;
+  font-size: 250px;
+  transition: transform 0.3s ease;
   white-space: nowrap;
 
-  
 }
+
+  
+
+
+
 
