--- a/src/App.css
+++ b/src/App.css
@@ -1,126 +1,132 @@
-*{
-    margin: 0;
-    padding: 0;
+* {
+  margin: 0;
+  padding: 0;
 }
 
-body{
-    margin: 0;
-    /* color: white; */
-    padding: 0;
-      overflow-x: hidden;
-      scroll-behavior: smooth;
-    background-color: black;
+body {
+  margin: 0 auto;
+  /* color: white; */
+  padding: 0;
+  overflow-x: hidden;
+  scroll-behavior: smooth;
+  background-color: black;
+  max-width: 94% !important;
 }
 
 @font-face {
-    font-family: "circularstd-light";
-    src: url("../src/Fonts/circularstd-light.otf") format("truetype");
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
-  }
-  @font-face {
-    font-family: "circularstd-medium";
-    src: url("../src/Fonts/circularstd-light.otf") format("truetype");
+  font-family: "circularstd-light";
+  src: url("../src/Fonts/circularstd-light.otf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "circularstd-medium";
+  src: url("../src/Fonts/circularstd-light.otf") format("truetype");
 
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
-  }
-  @font-face {
-    font-family: "circularstd-book";
-    src: url("../src/Fonts/circularstd-book.otf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "circularstd-book";
+  src: url("../src/Fonts/circularstd-book.otf") format("truetype");
 
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
-  }
-  @font-face {
-    font-family: "circularstd-bold";
-    src: url("../src/Fonts/circularstd-bold.otf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "circularstd-bold";
+  src: url("../src/Fonts/circularstd-bold.otf") format("truetype");
 
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
-  }
-  @font-face {
-    font-family: "circularstd-black";
-    src: url("../src/Fonts/circularstd-light.otf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "circularstd-black";
+  src: url("../src/Fonts/circularstd-light.otf") format("truetype");
 
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
-  }
-  @font-face {
-    font-family: "AquireLight";
-    src: url("../src/Fonts/AquireLight-YzE0o.otf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "AquireLight";
+  src: url("../src/Fonts/AquireLight-YzE0o.otf") format("truetype");
 
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
-  }
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
 
-  @font-face {
-    font-family: "AquireLight";
-    src: url("../src/Fonts/AquireBold-8Ma60.otf") format("truetype");
+@font-face {
+  font-family: "AquireBold";
+  src: url("../src/Fonts/AquireBold-8Ma60.otf") format("truetype");
 
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
-  }
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
 
-  @font-face {
-    font-family: "Markpro_bold";
-    src: url("../src/Fonts/Mark\ Pro\ Bold.otf") format("truetype");
+@font-face {
+  font-family: "Markpro_bold";
+  src: url("../src/Fonts/Mark\ Pro\ Bold.otf") format("truetype");
 
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
-  }
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
 
+/* //Italic fonts */
+@font-face {
+  font-family: "Acumin_bold";
+  src: url("../src/Fonts/Acumin-BdItPro.otf") format("truetype");
 
-  /* //Italic fonts */
-  @font-face {
-    font-family: "Acumin_bold";
-    src: url("../src/Fonts/Acumin-BdItPro.otf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
 
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
-  }
+/* //Crafting font */
+@font-face {
+  font-family: "CABINSKETCH-BOLD";
+  src: url("../src/Fonts/CABINSKETCH-BOLD.OTF") format("truetype");
 
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
 
-  /* //Crafting font */
-  @font-face {
-    font-family: "CABINSKETCH-BOLD";
-    src: url("../src/Fonts/CABINSKETCH-BOLD.OTF") format("truetype");
+@font-face {
+  font-family: "gotham-bold";
+  src: url("../src/Fonts/GothamHTF-Bold.otf") format("truetype");
 
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
-  }
-
-  @font-face {
-    font-family: "gotham-bold";
-    src: url("../src/Fonts/GothamHTF-Bold.otf") format("truetype");
-
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
-  }
-
-  
-
-  
-
-  
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
 
 
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
 
+.box {
+  width: 200px;
+  height: 200px;
+  background-color: blue;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: transform 0.3s ease;
+}
 
-
-
-
-
-
-
+.box.hovered {
+  transform: translate(0, 0);
+}
