--- a/src/Elements/Hero.css
+++ b/src/Elements/Hero.css
@@ -2,42 +2,6 @@
   width: 100%;
   height: 100vh;
 }
-
-
-
-
-
-.hero-section .hero-content .hero-img img {
-  width: 100%;
-  height: 100%;
-  background-size: cover;
-  background-position: center;
-
-}
-
-.hero-img .layer-1 {
-  z-index: 998;
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 100%;
-  height: 100%;
-  /* background: linear-gradient(to bottom left, rgba(0,0,0,0.1) 0%, rgba(0,0,0,0.8) 100%); */
-  background: linear-gradient(to bottom left, rgba(0,0,0,0.1) 0%, rgba(0,0,0,0.8) 100%);
-}
-
-.hero-img .layer-2 {
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 100%;
-  height: 100%; 
-  background: linear-gradient(-24deg, black,rgba(0,0,0,0.95)40%,rgba(255,255,255,0),rgba(255,255,255,0));
-
-  /* background: linear-gradient(to bottom right, rgba(0,0,0,0) 20%, rgba(0,0,0,0) 10%, rgba(0,0,0,0.99) 65%); */
-}
-
-
 .hero-bg-content{
   max-width:100% ;
   display: flex;
@@ -67,13 +31,14 @@
   left: 1300px;
   font-family: 'gotham-bold';
   font-weight: 900  ;
-  z-index: 9999;
-  color: rgba(0,0,0,0);
-  -webkit-text-stroke-width: 1px;
-  -webkit-text-stroke-color: white;
+  z-index: 980;
+  color: rgba(255,255,255,0.1);
+  /* -webkit-text-stroke-width: 2px;
+  -webkit-text-stroke-color: white; */
   font-size: 250px;
   transition: transform 2s ease;
   white-space: nowrap;
+  z-index: -1;
 }
 
 .hero-moving-text1{
@@ -85,10 +50,11 @@
   /* color: black; */
   color: rgba(255,255,255,0.95);
   font-weight: 900  ;
-  z-index: 9999;
+  z-index: 980;
   font-size: 250px;
   transition: transform 0.3s ease;
   white-space: nowrap;
+  z-index: 0;
 
 }
 
