--- a/src/Elements/Navbar.css
+++ b/src/Elements/Navbar.css
@@ -288,10 +288,10 @@
 .inner-menu-content {
   position: relative;
   display: grid;
-  grid-template-columns: auto auto;
+  grid-template-columns: auto ;
   width: 100%;
   min-width: none;
-  font-size: 100px;
+  font-size: 85px;
   font-family: "Inter";
   flex-direction: column;
   z-index: 999;
@@ -299,7 +299,7 @@
   cursor: pointer;
 }
 
-.inner-menu-content .active{
+.inner-menu-content .active span{
   color: white;
 }
 
@@ -307,7 +307,7 @@
   color: white;
 }
 
-.inner-menu-content a {
+.inner-menu-content a{
   text-decoration: none important;
   -webkit-text-stroke-color: #fff;
   -webkit-text-stroke-width: 1px;
@@ -331,7 +331,6 @@
   top: 50%;
   left: 0%;
   font-weight: 900;
-
   transform: translate(-10%, -50%);
   color: rgba(255, 255, 255, 0.1);
   font-size: 350px;
