--- a/src/App.css
+++ b/src/App.css
@@ -46,7 +46,7 @@ body {
 }
 @font-face {
   font-family: "circularstd-black";
-  src: url("../src/Fonts/circularstd-light.otf") format("truetype");
+  src: url("../src/Fonts/circularstd-black.otf") format("truetype");
 
   font-weight: normal;
   font-style: normal;
@@ -108,6 +108,23 @@ body {
   font-display: swap;
 }
 
+@font-face {
+  font-family: "Segoe";
+  src: url("../src/Fonts/Segoe\ UI.ttf") format("truetype");
+
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Segoe-bold";
+  src: url("../src/Fonts/Segoe\ UI\ Bold.ttf") format("truetype");
+
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
 
 
 
