Changes made in inner-menu

--- a/src/Elements/Navbar.css
+++ b/src/Elements/Navbar.css
@@ -270,8 +270,13 @@
   transform: translate(-0.1em, -0.1em);
 }
 
-.inner-menu {
-  color: white;
+.inner-menu.close {
+  opacity: 0;
+}
+.inner-menu.open {
+  opacity: 1;
+  transition: opacity 1s ease-in-out;
+  color: black;
   position: fixed;
   top: 0;
   left: 0;
@@ -280,7 +285,7 @@
   padding: 0;
   margin: 0;
   z-index: 990;
-  background-color: rgba(0, 0, 0);
+  background-color: rgb(255, 255, 255);
   transform: translate(-50%, 50%, 50%);
   transition: transform 4s ease-in-out;
   display: flex;
@@ -293,30 +298,30 @@
   display: grid;
   grid-template-columns: auto;
   /* width: 100%; */
-  font-size: 65px;
   /* font-family: "Inter"; */
 
   flex-direction: column;
   z-index: 999;
-  padding: 120px 0 170px 100px;
+  padding: 130px 0 170px 100px;
 }
 
-.inner-menu-content .active span {
-  color: white;
+.inner-menu-content .active span::before {
+  color: black;
 }
 
 .inner-menu-content span:hover {
-  color: white;
+  content: "━";
+
+  color: black;
 }
 
 .inner-menu-content a {
   text-decoration: none important;
-  -webkit-text-stroke-color: #fff;
-  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: black;
+  -webkit-text-stroke-width: 2px;
   color: rgba(0, 0, 0, 0);
   /* font-family: "Roboto"; */
-  font-family: "Segoe-bold";
-
+  font-family: "Inter";
   font-weight: 900;
   text-transform: uppercase;
   z-index: 9999;
@@ -325,10 +330,11 @@
 
 .inner-menu-content a {
   text-decoration: none;
+  font-size: 50px;
 }
 .inner-menu-content a.active {
-  color: #fff;
-  -webkit-text-stroke-width: 1px;
+  color: black;
+  -webkit-text-stroke-width: 2px;
 }
 
 .inner-menu-center-big-text {
@@ -337,7 +343,7 @@
   left: -25%;
   font-weight: 900;
   transform: translate(-10%, -50%);
-  color: rgba(255, 255, 255, 0.1);
+  color: rgba(0, 0, 0, 0.15);
   font-size: 350px;
   z-index: -2;
   font-family: "Inter";
@@ -356,7 +362,7 @@
   font-family: "Segoe-bold";
   font-size: 50px;
   font-weight: 900;
-  border-bottom: 1px solid white;
+  border-bottom: 1px solid black;
   width: fit-content;
 }
 
@@ -364,14 +370,14 @@
   padding-top: 1em;
   font-size: 20px;
   font-weight: 200;
-  color: rgba(255, 255, 255, 0.7);
+  color: rgba(0, 0, 0, 0.7);
 }
 
 .contact-details .Email_id {
   font-weight: 500;
   font-size: 20px;
   padding-top: 5px;
-  color: rgba(255, 255, 255, 0.7);
+  color: rgba(0, 0, 0, 0.7);
 }
 
 .social-media {
