--- a/src/Elements/Navbar.css
+++ b/src/Elements/Navbar.css
@@ -275,6 +275,7 @@
 }
 
 .inner-menu.open {
+  opacity: 1;
   transform: translate(-50%, 0, 0);
 }
 
@@ -327,7 +328,7 @@
   text-decoration: none important;
   -webkit-text-stroke-color: black;
   -webkit-text-stroke-width: 2px;
-  color: rgba(0, 0, 0, 0);
+  color: rgba(0, 0, 0, 0.3);
   font-family: "Lato";
   /* font-family: "Inter"; */
   font-weight: 900;
