--- a/src/Elements/Hero.css
+++ b/src/Elements/Hero.css
@@ -3,9 +3,10 @@
   height: 100vh;
 }
 .hero-bg-content{
-  max-width:100% ;
+  position: relative;
+  width:100% ;
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
   align-items: center;
   height: 100vh;
   font-size: 5.5em;
@@ -27,7 +28,7 @@
 
 .hero-moving-text{
   position: absolute;  
-  top: 400px;
+  top: 500px;
   left: 1300px;
   font-family: 'Lato';
   font-weight: 900  ;
@@ -58,6 +59,22 @@
 
 }
 
+
+/* hero-bg-image */
+
+.hero-bg-image{
+  width: 100%;
+  height: 100vh;
+  position: absolute;
+  background-size: cover;
+  background-position: center;
+}
+
+.hero-bg-image img {
+  /* position: absolute; */
+  width: 50%;
+  height: 130vh;
+}
   
 
 
