--- a/src/Elements/Navbar.css
+++ b/src/Elements/Navbar.css
@@ -314,7 +314,7 @@
   padding: 130px 0 120px 100px;
 }
 
-.inner-menu-content .active span::before {
+.inner-menu-content .active  {
   color: black;
 }
 
@@ -327,14 +327,16 @@
 .inner-menu-content a {
   text-decoration: none important;
   -webkit-text-stroke-color: black;
-  -webkit-text-stroke-width: 2px;
-  color: rgba(0, 0, 0, 0.3);
+  /* -webkit-text-stroke-width: 2px; */
+  color: rgb(90, 90, 90);
   font-family: "Lato";
   /* font-family: "Inter"; */
   font-weight: 900;
   text-transform: uppercase;
   z-index: 9999;
   width: fit-content;
+  filter: blur(1.5px);
+
 }
 
 .inner-menu-content a {
@@ -343,6 +345,7 @@
 }
 .inner-menu-content a.active {
   color: black;
+  filter: none;
   -webkit-text-stroke-width: 2px;
 }
 
@@ -393,3 +396,59 @@
   display: flex;
   gap: 20px;
 }
+
+
+
+.right_navbar_body {
+  position: absolute;
+  right: 5px;
+  top: 50px;
+  /* overflow: scroll;  */
+  overflow-x: hidden;
+  /* height: 100%; */
+  margin: 0;
+}
+::-webkit-scrollbar {
+  display: none;
+}
+
+.right_navbar {
+  float: right;
+
+}
+.right_navbar_ul{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  
+}
+
+.right_navbar li{
+  display: block;
+  margin: 0px 0px 0px 0px;
+  -webkit-writing-mode: vertical-rl;
+  -ms-writing-mode: tb-rl;
+  writing-mode: vertical-rl;
+  padding: 30px 0px 0px 0px;
+}
+.right_navbar .border{
+  border-right: 1px solid white;
+  position: absolute;
+  top: 110px;
+  width: 50px;
+  height: 50px;
+
+}
+
+.right_navbar_ul .icons{
+  padding-top: 70px;
+}
+.right_navbar li a {
+  text-decoration: none;
+  color: white;
+  font-family: 'Inter';
+  font-weight: 300;
+}
+
+
