--- a/src/Elements/Navbar.css
+++ b/src/Elements/Navbar.css
@@ -283,7 +283,6 @@
   opacity: 0;
 }
 
-
 .inner-menu {
   transition: transform 0.5s ease-in-out;
   color: black;
@@ -314,13 +313,12 @@
   padding: 130px 0 120px 100px;
 }
 
-.inner-menu-content .active  {
+.inner-menu-content .active {
   color: black;
 }
 
 .inner-menu-content span:hover {
-  content: "━";
-
+  filter: none;
   color: black;
 }
 
@@ -336,7 +334,6 @@
   z-index: 9999;
   width: fit-content;
   filter: blur(1.5px);
-
 }
 
 .inner-menu-content a {
@@ -396,59 +393,4 @@
   display: flex;
   gap: 20px;
 }
-
-
-
-.right_navbar_body {
-  position: absolute;
-  right: 5px;
-  top: 50px;
-  /* overflow: scroll;  */
-  overflow-x: hidden;
-  /* height: 100%; */
-  margin: 0;
-}
-::-webkit-scrollbar {
-  display: none;
-}
-
-.right_navbar {
-  float: right;
-
-}
-.right_navbar_ul{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  
-}
-
-.right_navbar li{
-  display: block;
-  margin: 0px 0px 0px 0px;
-  -webkit-writing-mode: vertical-rl;
-  -ms-writing-mode: tb-rl;
-  writing-mode: vertical-rl;
-  padding: 30px 0px 0px 0px;
-}
-.right_navbar .border{
-  border-right: 1px solid white;
-  position: absolute;
-  top: 110px;
-  width: 50px;
-  height: 50px;
-
-}
-
-.right_navbar_ul .icons{
-  padding-top: 70px;
-}
-.right_navbar li a {
-  text-decoration: none;
-  color: white;
-  font-family: 'Inter';
-  font-weight: 300;
-}
-
 
