--- a/src/Elements/Hero.css
+++ b/src/Elements/Hero.css
@@ -21,7 +21,7 @@
 
 .hero-bg-content .hero-title {
   font-weight: 900;
-  font-family: "Britanica-semi- expanded-thin";
+  font-family: "Britanica-semi-expanded-thin";
   font-size: 11.5em;
   text-shadow: 3px 0px 7px rgba(255, 255, 255, 0.1),
     -3px 0px 7px rgba(255, 255, 255, 0.1), 0px 4px 7px rgba(255, 255, 255, 0.1);
