--- a/src/Elements/Navbar.css
+++ b/src/Elements/Navbar.css
@@ -47,240 +47,9 @@
   color: black;
   font-size: 1.3em;
 }
-/* ALL */
-
-.hamburger .line {
-  height: 4px;
-  background-color: black;
-  display: block;
-  color: black;
-  margin: 6px -16px;
-  -webkit-transition: all 0.3s ease-in-out;
-  -o-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
-}
-
-.hamburger.is-active .line {
-  height: 4px;
-  display: flex;
-  color: black;
-  background-color: black;
-  justify-content: center;
-  align-items: center;
-}
-
-.content {
-  margin: 10px 0 0 57px;
-}
-
-.left-navbar {
-  z-index: 9999;
-  background-color: rgba(0, 0, 0, 0.1);
-  width: 50px;
-  height: 100vh;
-  position: absolute;
-  top: 30%;
-  left: 0px;
-}
-
-.left-navbar-content {
-  height: 30vh;
-  width: 50px;
-  display: flex;
-  flex-flow: column nowrap;
-  justify-content: space-around;
-  align-items: center;
-  padding-bottom: 7em;
-}
-.left-navbar-content span {
-  color: #fff;
-}
-
-.follow {
-  font-family: "Nunito";
-  font-weight: 100;
-  color: #fff;
-  transform: rotate(270deg);
-}
-
-/* --------------------------------------------------------------LEFT NAVBAR-------------------------------------------------------------- */
-
-.scroll-arrow {
-  font-family: "Inter";
-  display: flex;
-  align-items: center;
-  font-weight: 300;
-}
-
-.scroll-arrow p {
-  font-size: 10px;
-  padding-left: 4em;
-  color: black;
-  /* color: rgba(255, 255, 255, 0.8); */
-}
-
-.l-navbar-content {
-  position: absolute;
-  padding: 100px 0 0 90px;
-}
-
-.link {
-  position: relative;
-  display: block;
-  padding: 1em 2em 1em 0.1em;
-  text-decoration: none;
-  font-weight: "Nunito";
-}
-
-.link:after,
-.link:before {
-  content: "";
-  display: block;
-  position: absolute;
-  transition: all 0.5s ease-in-out;
-}
-
-.link:before {
-  top: 53%;
-  right: 9.9em;
-  width: 7px;
-  height: 7px;
-  transform-origin: 50% 50%;
-  transform: translate(0, -0.38em) rotate(-135deg);
-  box-shadow: inset -0.05em 0.05em 0 0 rgba(255, 255, 255, 0.8);
-  border-radius: 0 0 0 0;
-}
-
-.link:after {
-  top: 50%;
-  right: 105px;
-  width: 60px;
-  height: 0.05em;
-  transform: translate(0, -0.1em);
-  background-color: rgba(255, 255, 255, 0.9);
-}
-
-.link:hover:before {
-  transform: translate(-0.5em, -85%) rotate(-135deg);
-}
-
-.link:hover:after {
-  transform: translate(-0.5em, -0.1em);
-}
-
-/* ---------------------------- bottom navbar ----------------------------*/
-
-.bottom-navbar {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: auto;
-  overflow: hidden;
-  z-index: 999;
-  font-size: 14px;
-}
-
-.b-navbar-content {
-  width: 100%;
-  padding-left: 240px;
-  padding-bottom: 25px;
-  display: flex;
-  align-items: center;
-  gap: 8em;
-}
-
-.b-navbar-content p {
-  font-family: "Inter";
-  color: rgba(255, 255, 255, 0.8);
-  cursor: pointer;
-  font-family: 200;
-  transition: transform 0.5s ease-in-out;
-}
-
-.b-navbar-content p:hover {
-  transform: scale(1.1);
-}
-
-/* -----------------------------Right navbar ----------------------------- */
-
-.right-navbar {
-  z-index: 999;
-  position: absolute;
-  right: -20px;
-  top: 70%;
-  transform: translate(-25%, -20%) rotate(90deg);
-  transform-origin: right center;
-  /* background-color: bisque; */
-  padding: 20px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-end;
-}
-
-.r-navbar-content {
-  display: flex;
-  /* flex-direction: row-reverse; */
-  align-items: center;
-
-  gap: 10em;
-}
-.r-navbar-content p {
-  font-family: "Inter";
-  font-weight: 200;
-  display: flex;
-  justify-content: center;
-  color: rgba(255, 255, 255, 0.6);
-}
-.r-navbar-content .icons {
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  text-decoration: none;
-  color: rgba(255, 255, 255, 0.5);
-  font-size: 25px;
-  display: flex;
-  transform: rotate(-90deg);
-  flex-direction: column;
-  gap: 0.5em;
-}
-
-.r-navbar-content .icons:hover {
-  color: rgba(255, 255, 255, 0.9);
-  cursor: pointer;
-}
-
-.link1 {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  padding: 1em 1em 1em 1em;
-  text-decoration: none;
-  font-weight: "Nunito";
-}
-.link1:after,
-.link1:before {
-  content: "";
-  display: block;
-  position: absolute;
-  transition: all 0.5s ease-in-out;
-}
-
-.link1:after {
-  top: 50%;
-  right: 100px;
-  width: 75px;
-  height: 0.1em;
-  transform: translate(0, -0.05em);
-  background-color: rgba(255, 255, 255, 0.8);
-}
-.link1:hover:before {
-  transform: translate(-0.5em, -0.371em) rotate(-135deg);
-}
-.link1:hover:after {
-  transform: translate(-0.1em, -0.1em);
-}
 
 .inner-menu.close {
+  opacity: 0;
   transform: translate(-50%, 50%, 50%);
 }
 
@@ -290,10 +59,6 @@
   overflow-y: auto;
 }
 
-.inner-menu.close {
-  opacity: 0;
-}
-
 .inner-menu {
   transition: transform 0.5s ease-in-out;
   color: black;
@@ -301,7 +66,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: auto;
+  height: 100%;
   padding: 0;
   margin: 0;
   z-index: 990;
@@ -310,22 +75,16 @@
   transition: transform 4s ease-in-out;
 }
 
-.inner-menu .inner-menu-details{
-  width: 100%;
-  height: auto;
+.inner-menu .inner-menu-details {
   /* position: absolute; */
-  top: 0;
-  left: 0;
+  padding: 50px 50px;
   overflow: scroll;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   z-index: 9999;
   background-color: rgb(255, 255, 255);
-
-  
 }
-
 
 .inner-menu-content {
   position: relative;
@@ -351,7 +110,7 @@
   text-decoration: none important;
   -webkit-text-stroke-color: black;
   -webkit-text-stroke-width: 2px;
-  color: rgb(0,0,0,0);
+  color: rgb(0, 0, 0, 0);
   font-family: "Lato";
   /* font-family: "Inter"; */
   font-weight: 900;
@@ -418,7 +177,7 @@
   gap: 30px;
 }
 
-.social-media .social-icons{
+.social-media .social-icons {
   font-size: 40px;
 }
 
@@ -495,7 +254,7 @@
     font-size: 40px;
   }
 
-  .contact-details .social-media{
+  .contact-details .social-media {
     gap: 20px;
   }
 
@@ -506,7 +265,6 @@
   .inner-menu .contact-details {
     padding: 155px 0 190px 30px;
   }
-
 
   .inner-menu-center-big-text {
     left: -10%;
@@ -530,13 +288,13 @@
     font-size: 18px;
   }
   .contact-details .social-media {
-    gap:15px;
+    gap: 15px;
   }
   .inner-menu .contact-details {
     padding: 125px 0 125px 40px;
   }
 
-  .social-media .social-icons{
+  .social-media .social-icons {
     font-size: 30px;
   }
 
@@ -604,19 +362,17 @@
   }
 }
 
-
-@media all and (max-width: 480.98px){
-  .inner-menu{
+@media all and (max-width: 480.98px) {
+  .inner-menu {
     height: auto;
     overflow: scroll;
   }
-  .inner-menu .inner-menu-details{
+  .inner-menu .inner-menu-details {
     display: flex;
     flex-direction: column;
     overflow: scroll;
   }
   .inner-menu-content {
-    
     align-items: center;
     padding: 150px 0 30px 8px;
     text-align: center;
@@ -626,19 +382,16 @@
   }
 
   .contact-details .contact-title {
-
-
     font-size: 20px;
     text-align: center;
   }
 
-  .contact-content{
+  .contact-content {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
   }
-
 
   .contact-details .phone_no,
   .contact-details .Email_id {
@@ -650,7 +403,7 @@
     position: relative;
   }
 
-  .social-media .social-icons{
+  .social-media .social-icons {
     font-size: 25px;
   }
   .inner-menu .contact-details {
@@ -661,26 +414,20 @@
   }
 
   .inner-menu-center-big-text {
-    
     top: 73%;
     left: 18%;
     font-size: 200px;
     word-break: break-word;
-
   }
-  
 }
 
-@media all and (max-width:374.98px) {
-
-  
-  .inner-menu .inner-menu-details{
+@media all and (max-width: 374.98px) {
+  .inner-menu .inner-menu-details {
     display: flex;
     flex-direction: column;
     overflow: scroll;
   }
   .inner-menu-content {
-    
     align-items: center;
     padding: 320px 0 20px 8px;
     text-align: center;
@@ -690,19 +437,16 @@
   }
 
   .contact-details .contact-title {
-
-
     font-size: 20px;
     text-align: center;
   }
 
-  .contact-content{
+  .contact-content {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
   }
-
 
   .contact-details .phone_no,
   .contact-details .Email_id {
@@ -719,28 +463,24 @@
     align-items: center;
     padding: 0px 0 140px 5px;
   }
-  .social-media .social-icons{
+  .social-media .social-icons {
     font-size: 10px;
   }
 
-
   .inner-menu-center-big-text {
-    
     top: 73%;
     left: 18%;
     font-size: 180px;
     word-break: break-word;
-
   }
 }
 
-@media all and (max-width:319.98px) {
-  .inner-menu{
+@media all and (max-width: 319.98px) {
+  .inner-menu {
     display: flex;
     flex-direction: column;
   }
   .inner-menu-content {
-    
     align-items: center;
     padding: 150px 0 50px 8px;
     text-align: center;
@@ -750,19 +490,16 @@
   }
 
   .contact-details .contact-title {
-
-
     font-size: 20px;
     text-align: center;
   }
 
-  .contact-content{
+  .contact-content {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
   }
-
 
   .contact-details .phone_no,
   .contact-details .Email_id {
@@ -774,7 +511,7 @@
     position: absolute;
   }
 
-  .social-media .social-icons{
+  .social-media .social-icons {
     font-size: 15px;
   }
   .inner-menu .contact-details {
@@ -785,11 +522,9 @@
   }
 
   .inner-menu-center-big-text {
-    
     top: 53%;
     left: 18%;
     font-size: 150px;
     word-break: break-word;
-
   }
 }
