--- a/src/Elements/Navbar.css
+++ b/src/Elements/Navbar.css
@@ -56,7 +56,6 @@
 .inner-menu.open {
   opacity: 1;
   transform: translate(-50%, 0, 0);
-  overflow-y: auto;
 }
 
 .inner-menu {
@@ -66,7 +65,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   padding: 0;
   margin: 0;
   z-index: 990;
@@ -78,7 +77,8 @@
 .inner-menu .inner-menu-details {
   /* position: absolute; */
   padding: 50px 50px;
-  overflow: scroll;
+  height: 100vh;
+  overflow-y: scroll;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -263,7 +263,7 @@
     font-size: 20px;
   }
   .inner-menu .contact-details {
-    padding: 155px 0 190px 30px;
+    padding: 155px 0 94px 30px;
   }
 
   .inner-menu-center-big-text {
@@ -291,7 +291,7 @@
     gap: 15px;
   }
   .inner-menu .contact-details {
-    padding: 125px 0 125px 40px;
+    padding: 125px 0 150px 40px;
   }
 
   .social-media .social-icons {
@@ -324,7 +324,7 @@
     gap: 10px;
   }
   .inner-menu .contact-details {
-    padding: 145px 0 80px 35px;
+    padding: 145px 0 50px 35px;
   }
 
   .inner-menu-center-big-text {
