--- a/src/Elements/Navbar1.css
+++ b/src/Elements/Navbar1.css
@@ -44,7 +44,7 @@
   display: flex;
   justify-content: space-around;
   max-width: 94%;
-  padding: 140px 80px 0;
+  padding: 140px 80px 30px;
 }
 
 .inner_menu .left-menu {
@@ -54,8 +54,8 @@
 
 .inner_menu .left-menu a {
   width: fit-content;
-  -webkit-text-stroke-width: 2px;
-  -webkit-text-stroke-color: white;
+  -webkit-text-stroke-width: 0.5px;
+  -webkit-text-stroke-color: rgba(255, 255, 255, 0.8);
   font-family: "Lato";
   font-size: 100px;
   text-decoration: none;
@@ -63,36 +63,150 @@
   font-weight: 900;
   padding-left: 30px;
   z-index: 999;
+  position: relative;
+  overflow: hidden;
 }
 
-.inner_menu .left-menu a:hover {
-  color: white;
+@keyframes fillAnimation {
+  0% {
+    background-position: -100% 0;
+  }
+  100% {
+    background-position: 100% 0;
+  }
 }
+
+.inner_menu .left-menu a::before {
+  content: attr(data-text);
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  background-image: linear-gradient(
+    to right,
+    rgba(255, 255, 255, 0.8) 0%,
+    rgba(255, 255, 255, 0.8) 100%
+  );
+  background-repeat: no-repeat;
+  background-size: 200% 100%;
+  background-position: -100% 0;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  transform-origin: left;
+  transform: scaleX(0);
+  transition: transform 2s linear;
+}
+
+.inner_menu .left-menu a:hover::before {
+  transform: scaleX(1);
+  background-position: 100% 0;
+  animation: fillAnimation 2s linear forwards;
+}
+
+@keyframes borderAnimation {
+  0% {
+    width: 0;
+    margin-left: 0;
+  }
+  100% {
+    width: 100%;
+    margin-left: 0;
+  }
+}
+
+.inner_menu .left-menu a {
+  position: relative;
+  overflow: hidden;
+}
+
+.inner_menu .left-menu a::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 0;
+  height: 2px;
+  background-color: rgba(255, 255, 255, 0.8);
+  animation-fill-mode: forwards;
+}
+
+.left-menu a:hover:before {
+  width: 100%;
+}
+.inner_menu .left-menu a::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 0%;
+  height: 2px;
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  white-space: nowrap;
+  content: attr(data-text);
+  position: absolute;
+  background: linear-gradient(
+    to left,
+    rgba(255, 255, 2550.8),
+    rgba(255, 255, 255, 0.8)
+  );
+  transform-origin: left;
+  transform: scaleX(0);
+  transition: transform 0.3s ease-in-out;
+}
+
+.inner_menu .left-menu a:hover::before {
+  width: 100%;
+  transform: scaleX(1);
+}
+
+.inner_menu .left-menu a:hover::after {
+  width: 100%;
+  animation: borderAnimation 2s linear;
+}
+
+/* .inner_menu .left-menu a:hover::after,
+.inner_menu .left-menu a:hover::before {
+  animation-play-state: running;
+} */
+
+.inner_menu .left-menu a:hover {
+  color: rgba(255, 255, 255, 0.8);
+}
+
+.inner_menu .left-menu a:hover span {
+  animation: colorAnimation 2s linear;
+}
+
 .menu-title {
   position: relative;
 }
 
 .left-menu number {
-  font-family: 'Nunito';
+  font-family: "Nunito";
   position: absolute;
   font-family: 100;
   top: 11px;
   left: 0;
   font-size: 20px;
   font-weight: 100;
-  color: rgba(255, 255, 255, 0.9);
+  color: rgba(255, 255, 255, 0.8);
 }
 
-.left-menu a.active{
-  color:white;
-  text-shadow: 10px 10px 10px 10px rgba(255, 255, 255, 0.9);
+.left-menu a.active {
+  color: rgba(255, 255, 255, 0.8);
+  text-shadow: 10px 10px 10px 10px rgba(255, 255, 255, 0.8);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.8);
 }
 
 .inner_menu .right-menu {
   display: flex;
-  flex-direction: column-reverse;
-  justify-content: space-evenly;
-  padding:0 0 40px 0;
+  flex-direction: column;
+  justify-content: flex-end;
+  padding: 20px 10px 50px 40px;
+  gap: 20px;
 }
 
 .inner_menu .right-menu .contact-title {
@@ -101,68 +215,299 @@
   font-weight: 900;
   -webkit-text-stroke-color: white;
   /* -webkit-text-stroke-width: 2px; */
-  color: white;
+  color: rgba(255, 255, 255, 0.8);
   border-bottom: 1px solid white;
 }
 
-.right-menu .phone_no{
+.right-menu .phone_no {
+  display: flex;
+  align-items: center;
+  gap: 20px;
   font-size: 15px;
-  font-family: 'Lato';
+  font-family: "Lato";
   font-weight: 500;
-  color: rgba(255, 255, 255, 0.9);
+  color: rgba(255, 255, 255, 0.5);
   padding-top: 10px;
-
+  cursor: pointer;
 }
 
-.right-menu .email_id{
+.right-menu .email_id {
+  display: flex;
+  align-items: center;
   font-size: 15px;
-  font-family: 'lato';
+  gap: 20px;
+  font-family: "lato";
   font-weight: 500;
-  color: rgba(255, 255, 255, 0.9);
+  color: rgba(255, 255, 255, 0.5);
+  cursor: pointer;
 }
 
-.right-menu .lets-colloborate{
-  font-family: 'Lato';
-  font-size: 50px;
+.right-menu .follow {
+  color: rgba(255, 255, 255, 0.8);
+  font-family: "Lato";
   font-weight: 900;
-  padding-bottom: 15px;
-  color: rgba(255, 255, 255, 0.9);
-
+  font-size: 30px;
+  padding-bottom: 10px;
 }
 
-.right-menu button{
+.right-menu .lets-colloborate {
+  font-family: "Lato";
+  font-size: 40px;
+  font-weight: 900;
+  padding-bottom: 10px;
+  color: rgba(255, 255, 255, 0.8);
+}
+
+.right-menu button {
   outline: none;
-  background: white;
+  background: rgba(255, 255, 255, 0.5);
   color: black;
   border-radius: 30px;
   border: none;
   padding: 15px 50px 15px 50px;
-  font-family: 'Nunito';
+  font-family: "Nunito";
   font-size: 20px;
   cursor: pointer;
 }
 
-.right-menu .contact-details{
+.right-menu .contact-details {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   gap: 5px;
 }
 
-.right-menu .contact-details .icons{
+.right-menu .icons {
   display: flex;
   gap: 40px;
   padding-top: 20px;
+  cursor: pointer;
+}
+.icon {
+  font-size: 40px;
 }
 .center-big-text {
-  left:  -100px;
+  left: -100px;
+  /* right: -100px; */
   position: absolute;
-  top: -50px;
+  top: 150px;
   font-family: "Inter";
   font-weight: 900;
-  color: rgba(255, 255, 255, 0.1);
+  color: rgba(250, 250, 250, 0.05);
   font-size: 300px;
   width: fit-content;
   word-break: break-word;
-  z-index: 0;
+  z-index: -1;
 }
+
+@media screen and (max-width: 1199.98px) {
+  .top-navbar .menu .inner_menu {
+    padding: 250px 30px 30px;
+  }
+  .inner_menu .right-menu {
+    padding: 20px 10px 30px 40px;
+    gap: 20px;
+  }
+}
+
+@media screen and (max-width: 999.98px) {
+  .top-navbar .menu .inner_menu {
+    padding: 300px 30px 30px;
+  }
+  .inner_menu .left-menu a {
+    font-size: 75px;
+  }
+  .inner_menu .right-menu {
+    padding: 10px 10px 20px 40px;
+    gap: 20px;
+  }
+}
+
+@media screen and (max-width: 880.98px) {
+  .top-navbar .menu .inner_menu {
+    padding: 380px 30px 30px;
+  }
+  .inner_menu .left-menu a {
+    font-size: 60px;
+  }
+  .inner_menu .right-menu {
+    padding: 10px 10px 10px 90px;
+    gap: 20px;
+  }
+  .right-menu .lets-colloborate {
+    font-size: 25px;
+  }
+
+  .right-menu button {
+    font-size: 10px;
+  }
+  .right-menu .follow {
+    font-size: 18px;
+  }
+  .center-big-text {
+    font-size: 250px;
+    top: 200px;
+  }
+
+  .right-menu .icon {
+    font-size: 30px;
+  }
+}
+
+@media screen and (max-width: 750.98px) {
+  .top-navbar .menu .inner_menu {
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 100px;
+    padding: 165px 10px 30px;
+  }
+  .box {
+    text-align: center;
+  }
+  .inner_menu .left-menu a {
+    font-size: 120px;
+  }
+  .inner_menu .right-menu {
+    padding: 10px 10px 10px 0px;
+    gap: 20px;
+    text-align: center;
+  }
+  .right-menu .lets-colloborate {
+    font-size: 45px;
+  }
+  .contact-details {
+    text-align: center;
+  }
+  .right-menu button {
+    font-size: 20px;
+  }
+  .right-menu .follow {
+    font-size: 30px;
+  }
+
+  .right-menu .phone_no,
+  .right-menu .email_id {
+    font-size: 22px;
+    margin: 0 auto;
+  }
+  .center-big-text {
+    font-size: 250px;
+    top: 200px;
+  }
+
+  .right-menu .icons {
+    justify-content: center;
+  }
+
+  .right-menu .icon {
+    font-size: 45px;
+    padding-top: 10px;
+  }
+}
+
+@media screen and (max-width: 699.98px) {
+  .top-navbar .menu .inner_menu {
+    gap: 70px;
+    padding: 165px 10px 30px;
+  }
+  .inner_menu .left-menu a {
+    font-size: 100px;
+  }
+
+  .center-big-text {
+    font-size: 220px;
+    top: 200px;
+  }
+}
+
+@media screen and (max-width : 582.98px) {
+  .top-navbar .menu .inner_menu {
+    gap: 100px;
+    padding: 165px 10px 30px;
+  }
+  .inner_menu .left-menu a {
+    font-size: 80px;
+  }
+
+  .center-big-text {
+    font-size: 180px;
+    top: 200px;
+  }
+
+  .right-menu .lets-colloborate{
+    font-size: 35px;
+  }
+}
+
+@media screen and (max-width : 482.98px) {
+  .top-navbar .menu .inner_menu {
+    gap: 180px;
+    padding: 165px 10px 30px;
+  }
+  .inner_menu .left-menu a {
+    font-size: 65px;
+  }
+
+  .center-big-text {
+    font-size: 170px;
+    top: 200px;
+  }
+  .right-menu .lets-colloborate{
+    font-size: 28px;
+  }
+  .right-menu button{
+    font-size: 19px;
+  }
+  .right-menu .follow{
+    font-size: 20px;
+  }
+
+  .right-menu .phone_no ,.right-menu  .email_id{
+    font-size: 15px;
+    gap: 5px;
+
+  }
+}
+
+@media screen and (max-width : 400.98px) {
+  .top-navbar .menu .inner_menu {
+    gap: 70px;
+    padding: 195px 10px 30px;
+  }
+  .inner_menu .left-menu a {
+    font-size: 50px;
+  }
+
+  .center-big-text {
+    font-size: 140px;
+    top: 200px;
+  }
+
+  .right-menu .lets-colloborate{
+    font-size: 20px;
+  }
+
+  .right-menu button{
+    font-size: 8px;
+  }
+  .right-menu .follow{
+    font-size: 14px;
+  }
+
+  .right-menu .phone_no, .right-menu .email_id{
+    font-size: 13px;
+    gap: 5px;
+  }
+
+  .right-menu .icons{
+    gap: 50px;
+    margin:  0 auto;
+  }
+  .icons .icon{
+      font-size: 30px;
+      
+  }
+}
+
+
